<resources>
  <string name="app_name">草莓播放器</string>
  <string name="home">频道</string>
  <string name="setting">设置</string>
  <string name="action_add">添加频道</string>
  <string name="add">添加</string>
  <string name="subscribe">订阅</string>
  <string name="group_list">分组列表</string>
  <string name="add_group">新建分组</string>
  <string name="group_manager">分组管理</string>
  <string name="cancel">取消</string>
  <string name="group_name">分组名字</string>
  <string name="confirm">确定</string>
</resources>
