<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/add_group"
      android:textColor="@android:color/black"
      android:textSize="20sp"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="15dp"
      android:text="@string/group_name"
      android:textColor="@android:color/black"
      android:textSize="12sp"
      />
  <EditText
      android:id="@+id/groupName"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textColor="@color/colorAccent"
      android:textSize="16sp"
      />
  <Button
      android:id="@+id/confirmButton"
      android:layout_gravity="center"
      android:layout_marginTop="20dp"
      android:text="@string/confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      />
</LinearLayout>